--- a/assets/package.json
+++ b/assets/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
